# NexusController

./: .gitignore  CHANGELOG.md  Dockerfile  INFRASTRUCTURE_FINAL_STATUS.md  README.md  config.yaml  docker-compose.yml  integrated_infrastructure_plan.md  nexus_state_manager.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
src/nexuscontroller/: __init__.py  __main__.py
src/nexuscontroller/api/: server.py
src/nexuscontroller/core/: controller.py  state_manager.py
src/nexuscontroller/plugins/: plugin_system.py
src/nexuscontroller/reliability/: disaster_recovery.py
tests/: conftest.py
tests/integration/: test_api_security.py
tests/unit/: test_database.py  test_security.py
